--- a/src/main/resources/templates/system/dept/dept.html
+++ b/src/main/resources/templates/system/dept/dept.html
@@ -39,14 +39,14 @@
 	</div>
 	<div th:include="include :: footer"></div>
 	<script th:inline="javascript">
-		var addFlag = [[${@permission.hasPermi('system:dept:add')}]];
-		var editFlag = [[${@permission.hasPermi('system:dept:edit')}]];
-		var removeFlag = [[${@permission.hasPermi('system:dept:remove')}]];
-		var datas = [[${@dict.getType('sys_normal_disable')}]];
-		var prefix = ctx + "system/dept"
+		let addFlag = [[${@permission.hasPermi('system:dept:add')}]];
+		let editFlag = [[${@permission.hasPermi('system:dept:edit')}]];
+		let removeFlag = [[${@permission.hasPermi('system:dept:remove')}]];
+		let datas = [[${@dict.getType('sys_normal_disable')}]];
+		let prefix = ctx + "system/dept"
 
 		$(function() {
-		    var options = {
+		    let options = {
 		        id: "deptId",
 		        parentId: "parentId",
 		        url: prefix + "/list",
@@ -81,7 +81,7 @@
 		            align: 'center',
 		            formatter: function(value, row, index) {
 		                if (row.parentId != 0) {
-		                    var actions = [];
+		                    let actions = [];
 		                    actions.push('<a class="btn btn-success btn-xs ' + editFlag + '" href="#" onclick="$.operate.edit(\'' + row.deptId + '\')"><i class="fa fa-edit">编辑</i></a> ');
 		                    actions.push('<a class="btn btn-info  btn-xs ' + addFlag + '" href="#" onclick="$.operate.add(\'' + row.deptId + '\')"><i class="fa fa-plus">新增</i></a> ');
 		                    actions.push('<a class="btn btn-danger btn-xs ' + removeFlag + '" href="#" onclick="remove(\'' + row.deptId + '\')"><i class="fa fa-remove">删除</i></a>');
